fix(ui): improve localized copy and table view readability